[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
opentelemetry = "0.23.0"
opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.0"
derive_more = "0.99.18"
http = "1.1.0"
httpmock = "0.7.0"
mockall = "0.12.1"
# pretty = "0.12.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.8.3"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
